[metadata]
name = CryptoPriceBIN
version = 1.0.0
author = DeKabilan
author_email = dekabilanmc@gmail.com
description = A Python Module that gives us current Crypto Prices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeKabilan/crypto_price_module
project_urls = 
    Bug Tracker = https://github.com/DeKabilan/crypto_price_module/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src